--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+@layer utilities{
+
+  .container {
+    @apply mx-auto max-w-screen-2xl px-4 md:px-6 lg:px-8;
+  }
+
+  .header{
+    @apply z-50 w-full h-[70px] bg-black/10 backdrop-blur-xs;
+  }
+
+  .header-wrapper {
+    @apply flex justify-between items-center px-6 py-4 text-white;
+  }
+}
