--- a/app/globals.css
+++ b/app/globals.css
@@ -135,4 +135,14 @@
   .header-wrapper {
     @apply flex justify-between items-center px-6 py-4 text-white;
   }
+
+  .form-title {
+    @apply text-4xl font-bold text-gray-400 mb-10;
+  }
+  .form-label {
+    @apply text-sm font-medium text-gray-400;
+  }
+  .form-input {
+    @apply h-12 px-3 py-3 text-white text-base placeholder:text-gray-500 border-gray-600 bg-gray-800 rounded-lg focus:!border-yellow-500 focus:ring-0;
+  }
 }
