Added the video component for home page with youtube playlist streaming

--- a/app/globals.css
+++ b/app/globals.css
@@ -114,12 +114,13 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 m-0 p-0;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground m-0 p-0;
   }
 }
+
 
 
 @layer utilities{
