--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -6,8 +8,6 @@
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -41,6 +41,10 @@
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
     --radius-xl: calc(var(--radius) + 4px);
+    --breakpoint-ipad-pro: 64rem;
+    --breakpoint-lg: 74rem;
+    --font-rubik: 'Rubik', sans-serif;
+    --font-suese-mono: 'SUSE Mono', monospace;
 }
 
 :root {
@@ -154,7 +158,11 @@
     }
 
     .event-section-grid{
-        @apply grid gap-5 grid-cols-1 md:grid-cols-2  lg:grid-cols-3;
+        @apply grid gap-5 grid-cols-2 md:grid-cols-3  ipad-pro:grid-cols-4 lg:grid-cols-5 ;
+    }
+
+    .winner-section-grid{
+        @apply grid gap-5 grid-cols-1 ipad-pro:grid-cols-2 lg:grid-cols-3 ;
     }
 
 }
