--- a/app/globals.css
+++ b/app/globals.css
@@ -154,7 +154,7 @@
     }
 
     .title {
-        @apply text-5xl font-light my-4;
+        @apply text-5xl font-semibold my-4 ;
     }
 
     .event-section-grid{
